<resources>
    <string name="app_name">ScSpeak</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_word_info">Word translations</string>

    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2743559009390249/9410592414</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_enable_notifications">Enable notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_word_fullscreen">Word</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="downloading">Downloading...</string>
    <string name="server">Server</string>
    <string name="done">Done</string>
    <string name="connectionError">Connection error!</string>

    <string-array name="noWordsArray">
        <item>No saved words!</item>
        <item>Click Here to download words from server</item>
        <item>Downloading a standard dictionary, or manually by adding the word you Accepted privacy policy!</item>
        <item>View privacy policy</item>
    </string-array>
    <string-array name="pref_search_array">
        <item>Current language</item>
        <item>All languages</item>
        <item>English</item>
        <item>Mackedonian</item>
        <item>Russian (Русский)</item>
    </string-array>

    <string name="getSystemLanguage">en</string>
    <string name="onThisLanguage">On English</string>
    <string name="onOthersLanguages">On others languages</string>
    <string name="wordInEnglish">"In English: "</string>
    <string name="wordInMakedonian">"In Makedonian: "</string>
    <string name="wordInRussian">"In Russian: "</string>
    <string name="pref_category_words">Words</string>
    <string name="pleaseWait">Please, wait...</string>
    <string name="removeAllDialogTitle">Remove all words?</string>
    <string name="removeAllDialogContent">All words will be removed!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="removeAllPreference">Remove all words</string>
    <string name="about">About</string>
    <string name="version">"Version: "</string>
    <string name="versionCode">"Build #: "</string>
    <string name="rateApp">Rate this app</string>
    <string name="goToGooglePlayQestion">Go to Google Play?</string>
    <string name="newWord">New word</string>
    <string name="editWord">Edit word</string>
    <string name="wordEdit_onLanguages">Different languages:</string>
    <string name="wordEdit_transcriptions">Transcriptions:</string>
    <string name="save">Save</string>
    <string name="shareServerFile">Share file for server</string>
    <string name="pref_syncNow">Sync now</string>
    <string name="transcription">Pronunciation of a word</string>
    <string name="close">Close</string>
    <string name="fileSaved">The file is saved!</string>
    <string name="pref_email">Developer mode</string>
    <string name="buy">Buy</string>
    <string name="ads">Advertisement</string>
    <string name="restorePurchases">restore purchases</string>
    <string name="disableADs">Disable advertisement</string>
    <string name="exportAll">Export al words</string>
    <string name="notBuyed">You are no have this in-app product!</string>
    <string name="unavableInThisMoment">This action is unavable in this moment! Click \"back\" and try again!</string>
    <string name="pref_search">Search language</string>
    <string name="action_delete">Delete</string>
    <string name="fileDeleted">The file is deleted!</string>
    <string name="adsDisabled">Advertising is disabled!</string>
    <string name="send_logcat">Send Logcat</string>
    <string name="onlyForDevelopers">This button is for developers only! Logcat can contain sensitive data!</string>
    <string name="pref_export">Allow export</string>
    <string name="pref_disableADs_summary">Paid function</string>
    <string name="pref_export_summary">Do not use! Only for developers!</string>
    <string name="pref_removeall_summary">This action is irreversible!</string>
    <string name="pref_sync_summary">Load all new words. If the word has a translation added, then delete the word before synchronization!</string>
    <string name="privacy">Privacy policy</string>
    <string name="noWordsDialogContent">Download words from the server and accept the privacy policy?\n\nTo view the privacy policy, click "NO" and select the appropriate option.</string>
    <string name="action_share">Share</string>
    <string name="helpActivity_title">Help</string>
    <string name="helpActivity_howToCreateWord">How to create a word?</string>
    <string name="helpActivity_howToCreateWord_info">In order to create a word (a phrase), you must click the \"+\" button on the application main screen.</string>
    <string name="helpActivity_howToChangeWord">How to change (Delete) a word?</string>
    <string name="helpActivity_howToChangeWord_info">1) Make a long click on the word you want to change (delete)\n2) Make the necessary changes to the word (when editing)\n3) click save (delete)</string>
    <string name="helpActivity_howToViewTranscription">How do I view the pronunciation of a word?</string>
    <string name="helpActivity_howToViewTranscription_answer">Click on the desired word translation</string>
    <string name="HelpActivity_fullscreen">How to view the word translation in full-screen mode?</string>
    <string name="helpActivity_fullscreen_content">Make a long press on the desired translation. In full screen mode, you can select a word (phrase). To exit full-screen mode, click anywhere on the screen.</string>
    <string name="license">"License: "</string>
    <string name="license_button">View license</string>
    <string name="sourceCode">View source code</string>

    <!--Запрос на использование рекламного интендификатора-->
    <string name="intendificatorReqest">Please provide access to your advertising ID</string>
    <string name="intendificatorMessage">This app is free, but it contains ads.\nDue to the fact that AdMob by default uses an advertising intensifier for advertising personalization, and Google Play requires the user\'s consent to use the advertising intensifier, you need either to allow access to the intensifier, or to refuse to use this application.\n\nPrivacy policy is available in the About window.</string>

</resources>