<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory android:title="@string/pref_category_words">
        <Preference
            android:title="@string/removeAllPreference"
            android:icon="@android:drawable/ic_menu_delete" >
            <intent android:action="ru.sccraft.scspeak.removeall"/>
        </Preference>
        <ListPreference
            android:entries="@array/pref_search_array"
            android:entryValues="@array/pref_search_array"
            android:icon="@android:drawable/ic_search_category_default"
            android:key="pref_searchLanguage"
            android:defaultValue="1"
            android:title="@string/pref_search" />
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@android:drawable/ic_menu_upload"
            android:key="pref_export"
            android:title="@string/pref_export" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/ads">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disableADsByEmail"
            android:title="@string/pref_email" />
        <Preference android:title="@string/disableADs">
            <intent android:action="ru.sccraft.scspeak.disableads" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
