<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.sccraft.scspeak.MainActivity">
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@android:string/search_go"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_exportAll"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="101"
        android:title="@string/exportAll"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="104"
        android:title="@string/helpActivity_title" />
    <item
        android:title="@string/about"
        android:orderInCategory="105"
        android:id="@+id/action_about" />

</menu>
